# diffkit-app

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  maidfile.toml
include/: deeplink.h  icon.icns  scripts.h.in  window.h
src/: deeplink.cc  main.cc
src/lib/: window.cc  window.mm
src/scripts/: inject.js
